tests/negative/parser/case-semi.orng
fn main() -> Int
    case let x = 4
    | true => 0